--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,10 +3,9 @@
 @tailwind utilities;
 
 :root {
-  font-family: "Gruppo", sans-serif;
+  font-family: "Montserrat", sans-serif;
   line-height: 1.5;
-  font-weight: 600;
-
+  font-weight: 100;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
